# snow_valormae

./: .gitignore  .nojekyll  CNAME  _quarto.yml  about.html  about.ipynb  about.qmd  contact.html  contact.qmd  expertise.html  expertise.qmd  gallery.html  gallery.qmd  index.html  index.qmd  listings.json  projects.html  projects.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css  terms.html  terms.qmd  valormae.html  valormae.qmd
site_libs/bootstrap/: bootstrap.min.css
